...
            ),
        )
    )

    fun display() = ReturningNetworkingUserAccountPicker(
        title = "Select account",
        defaultCta = "Connect account",
        accounts = emptyList(),
        aboveCta = "Above CTA coming from backend.",
        addNewAccount = AddNewAccount(
            body = "New bank account",
            icon = Image(
                default = "https://b.stripecdn.com/connections-statics-srv/assets/SailIcon--add-purple-3x.png"
...
