...
                android:text="@string/on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false" />

            <RadioButton
                android:id="@+id/default_billing_off_button"
                android:text="@string/off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />
        </RadioGroup>

...
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/custom_label_text_field" />

        <Button
            android:id="@+id/reload_button"
            android:text="@string/reload_paymentsheet"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/custom_checkout_button" />

        <Button
            android:id="@+id/complete_checkout_button"
            android:text="@string/checkout_complete"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:layout_marginBottom="16dp"
...
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/shipping_address_button"
                android:text="@string/add_shipping_address"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:enabled="true"
...
