<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">PaymentSheet Example</string>
    <string name="paymentsheet_title">PaymentSheet</string>
    <string name="paymentsheet_subtitle">Our simplest integration</string>
    <string name="paymentsheet_custom_title">FlowController</string>
    <string name="paymentsheet_custom_subtitle">A more advanced integration with greater flexibility</string>
    <string name="paymentsheet_serverside_confirmation_title">PaymentSheet with server-side confirmation</string>
    <string name="paymentsheet_custom_serverside_confirmation_title">FlowController with server-side confirmation</string>
    <string name="paymentsheet_serverside_confirmation_subtitle">Create and confirm the payment or setup intent on your own backend</string>
    <string name="customersheet_example_title">CustomerSheet Example</string>
    <string name="customersheet_playground_title">CustomerSheet Playground</string>
    <string name="customer_subtitle">Manage a customer</string>
    <string name="embedded_example_title">Embedded Payment Element Example</string>
    <string name="embedded_subtitle">Our simplest integration</string>
    <string name="address_element_title">Address Element</string>
    <string name="address_element_subtitle">Collect a customer\'s shipping address</string>
    <string name="beta_badge_label">This is currently in beta</string>
    <string name="under_construction_badge_label">This is currently under construction</string>
    <string name="playground_title">Playground</string>
    <string name="playground_subtitle">Testing playground for Stripe engineers</string>
    <string name="checkout_controller_example_title">CheckoutController Example</string>
    <string name="checkout_controller_example_subtitle">Configurable CheckoutController playground</string>
    <string name="onramp_title">Onramp Coordinator</string>
    <string name="onramp_subtitle">Test the OnrampCoordinator functionality</string>
    <string name="action_settings">Settings</string>
    <string name="product_subtitle">1 x Regular %s</string>
    <string name="subtotal">Subtotal</string>
    <string name="sales_tax">Sales tax (8.25%)</string>
    <string name="total">Total</string>
    <string name="hot_dog">Hot Dog</string>
    <string name="salad">Salad</string>
    <string name="cart_title">Your cart</string>
    <string name="buy">Buy</string>
    <string name="customer">Customer</string>
    <string name="customer_guest">Guest</string>
    <string name="customer_new">New</string>
    <string name="customer_returning">Returning</string>
    <string name="stripe_link">Link</string>
    <string name="stripe_google_pay">Google Pay</string>
    <string name="on">On</string>
    <string name="on_with_defaults">On w/ defaults</string>
    <string name="off">Off</string>
    <string name="checkout_mode">Checkout Mode</string>
    <string name="payment">Pay</string>
    <string name="payment_with_setup">P &amp; S</string>
    <string name="setup">Setup</string>
    <string name="reload_paymentsheet">Reload PaymentSheet</string>
    <string name="payment_method">Payment Method</string>
    <string name="loading">Loading…</string>
    <string name="select">Select</string>
    <string name="checkout_custom">Checkout (Custom)</string>
    <string name="checkout_complete">Checkout (Complete)</string>
    <string name="add_shipping_address">Add Shipping Address</string>
    <string name="currency">Currency</string>
    <string name="default_billing_address">Default Billing Address</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="default_shipping_address">Default Shipping Address</string>
    <string name="shipping_address_phone">Shipping Address Phone</string>
    <string name="shipping_address_required">Required</string>
    <string name="shipping_address_optional">Optional</string>
    <string name="shipping_address_hidden">Hidden</string>
    <string name="shipping_address_button_title">Shipping Address Button Title</string>
    <string name="shipping_address_checkbox_label">Shipping Address Checkbox Label</string>
    <string name="shipping_address_title">Shipping Address Screen Title</string>
    <string name="shipping_address_countries">Countries</string>
    <string name="shipping_address_all_countries">All</string>
    <string name="shipping_address_partial_countries">Partial</string>
    <string name="allowsDelayedPaymentMethods">Delayed PMs</string>
    <string name="automatic_pm">Automatic PMs</string>
    <string name="reset">Reset</string>
    <string name="confirm">confirm</string>
    <string name="currency_usd">USD</string>
    <string name="currency_eur">EUR</string>
    <string name="currency_gbp">GBP</string>
    <string name="currency_aud">AUD</string>
    <string name="show_sheet">Show Sheet</string>
    <string name="merchant_country">Merchant</string>
    <string name="attach_default_billing_address">Attach Default Billing Address</string>
    <string name="collect_name">Collect Name</string>
    <string name="collect_email">Collect Email</string>
    <string name="collect_phone">Collect Phone</string>
    <string name="collect_address">Collect Address</string>
    <string name="never">Never</string>
    <string name="auto">Auto</string>
    <string name="always">Always</string>
    <string name="full">Full</string>
    <string name="unable_to_load_checkout_title">Unable to load checkout</string>
    <string name="unable_to_load_checkout_subtitle">Maybe wait a few seconds, have some tea, read a book… then try again.</string>
    <string name="unable_to_load_checkout_button">Try again</string>
    <string name="success">Success</string>
    <string name="finish">Finish</string>
</resources>
