...

    @Composable
    private fun SaveableCardInputWidget(
        stateHolder: SaveableStateHolder,
    ) {
        stateHolder.SaveableStateProvider("stripe_elements") {
            Card(
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(16.dp)
            ) {
                Box {
                    AndroidView(
...
