...
  <string name="stripe_link_onramp_carf_declaration_cancel_button_text">Cancel</string>
  <!-- Title of the screen responsible for accepting CRS CARF declarations -->
  <string name="stripe_link_onramp_carf_declaration_screen_title">Declarations</string>
  <!-- Title for the address field on the KYC verification screen -->
  <string name="stripe_link_onramp_kyc_verification_address_field_title">Address</string>
  <!-- Text displayed in a confirmation button when gathering kyc information -->
  <string name="stripe_link_onramp_kyc_verification_confirm_button_text">Confirm</string>
  <!-- Title for the date of birth field on the KYC verification screen -->
  <string name="stripe_link_onramp_kyc_verification_dob_field_title">Date of birth</string>
  <!-- Title for the name field on the KYC verification screen -->
  <string name="stripe_link_onramp_kyc_verification_name_field_title">Name</string>
  <!-- Title of the screen responsible for confirming kyc information -->
  <string name="stripe_link_onramp_kyc_verification_screen_title">Confirm your information</string>
...
  <string name="stripe_paymentsheet_manage_payment_method">Manage payment method</string>
  <!-- Title shown above a view containing the customer's card payment methods that they can delete or update -->
  <string name="stripe_paymentsheet_manage_payment_methods">Manage payment methods</string>
  <!-- Title shown above a view containing a customer's SEPA debit account that they can delete or update -->
  <string name="stripe_paymentsheet_manage_sepa_debit">Manage SEPA debit</string>
  <!-- Title shown above a carousel containing the customer's payment methods -->
  <string name="stripe_paymentsheet_manage_your_payment_methods">Manage your payment methods</string>
  <!-- Prompt for microdeposit verification before completing purchase with merchant. %@ will be replaced by merchant business name -->
  <string name="stripe_paymentsheet_microdeposit">Stripe will deposit $0.01 to your account in 1-2 business days. Then you’ll get an email with instructions to complete payment to %s.</string>
  <!-- Content for alert popup prompting to confirm modifying saved payment method. -->
  <string name="stripe_paymentsheet_modify_pm">Edit %s</string>
  <!-- Label of a button that appears on a checkout screen. When tapped, it displays a credit card form. This button is shown next to another button representing the customer's saved card; the word 'new' is meant to differentiate this button's action with the saved card button. -->
  <string name="stripe_paymentsheet_new_card">New card</string>
...
