...
                checked = configurationState.isExistingCustomer,
                onCheckedChange = {
                    viewActionHandler(CustomerSheetPlaygroundViewAction.ToggleExistingCustomer)
                },
                modifier = Modifier
                    .semantics { testTagsAsResourceId = true }
                    .testTag("CUSTOMER_SHEET_PLAYGROUND_EXISTING_CUSTOMER")
            )
        }
    }

    @Suppress("LongMethod")
    @Composable
...
