...
    SUCCESS, FAILURE, SUCCESS_ASYNC, FAILURE_ASYNC
}

internal const val TEST_TAG_CANCELLED_BUTTON = "Cancelled"
internal const val TEST_TAG_FAILED_BUTTON = "Failed"
internal const val TEST_TAG_PROCEED_BUTTON = "Proceed"
internal const val TEST_TAG_SUBMIT_BUTTON = "Submit"
internal const val TEST_TAG_SUCCESS = "success"
internal const val TEST_TAG_SUCCESS_ASYNC = "success_async"
internal const val TEST_TAG_FAILURE = "failure"
internal const val TEST_TAG_FAILURE_ASYNC = "failure_async"

