appId: com.stripe.android.paymentsheet.example
---
- launchApp
- startRecording: /tmp/test_results/paymentsheet-paymentintent-addresselement-card
- scroll
# Android specific: Navigate to example
- waitForAnimationToEnd:
    timeout: 5000
- scrollUntilVisible:
    element: "Playground"
- tapOn: "Playground"
- scrollUntilVisible:
    element:
      id: "com.stripe.android.paymentsheet.example:id/default_billing_off_button"
- tapOn:
    id: "com.stripe.android.paymentsheet.example:id/default_billing_off_button"
- scrollUntilVisible:
    element:
      id: "com.stripe.android.paymentsheet.example:id/reload_button"
- tapOn:
    id: "com.stripe.android.paymentsheet.example:id/reload_button"
- scrollUntilVisible:
    element:
      id: "com.stripe.android.paymentsheet.example:id/shipping_address_button"
- tapOn:
      id: "com.stripe.android.paymentsheet.example:id/shipping_address_button"
- waitForAnimationToEnd:
    timeout: 5000
- tapOn: "Save address"
- tapOn:
      id: "com.stripe.android.paymentsheet.example:id/complete_checkout_button"
# ENTER CARD DETAILS
- extendedWaitUntil:
    visible: "Card"
    timeout: 60000
- assertVisible: "Billing address is same as shipping"
- runFlow:
    file: ./card/subflow-card-details.yaml
    env:
        CARD_NUMBER: 4242424242424242
- scrollUntilVisible:
    element:
      id: "com.stripe.android.paymentsheet.example:id/primary_button"
- tapOn:
    id: "com.stripe.android.paymentsheet.example:id/primary_button"
- assertVisible: ".*Success.*"
- stopRecording
