appId: com.stripe.android.paymentsheet.example
---
- launchApp
- startRecording: /tmp/test_results/newcustomer-googlepay
# Android specific: Navigate to example
- scrollUntilVisible:
    element: "CustomerSheet Playground"
- waitForAnimationToEnd:
    timeout: 5000
- tapOn: "CustomerSheet Playground"
- waitForAnimationToEnd:
    timeout: 5000
- extendedWaitUntil:
    visible: "Payment default"
    timeout: 60000
# Use a new customer
- tapOn:
    id: "CUSTOMER_SHEET_PLAYGROUND_EXISTING_CUSTOMER"
- extendedWaitUntil:
      visible: "Select"
      timeout: 60000
- tapOn: "Select"
- extendedWaitUntil:
      visible: "Manage your payment methods"
      timeout: 60000
- tapOn:
    id: "PAYMENT_OPTION_CARD_TEST_TAG_Google Pay"
- tapOn: "Confirm"
- assertVisible:
    text: "Google Pay"
    index: 1
- stopRecording
