appId: com.stripe.android.paymentsheet.example
---
- launchApp
- startRecording: /tmp/test_results/flowcontroller-deferred-paymentintent-card
# Android specific: Navigate to example
- tapOn: "FlowController with server-side confirmation"
- waitForAnimationToEnd:
      timeout: 5000
- extendedWaitUntil:
    visible: "Select"
    timeout: 60000
- tapOn: "Select"
- tapOn:
    id: "AddCard"
    optional: true
# ENTER CARD DETAILS
- runFlow:
    file: ./card/subflow-card-details.yaml
    env:
        CARD_NUMBER: 4242424242424242
- scroll
- tapOn:
    id: "com.stripe.android.paymentsheet.example:id/primary_button"
- tapOn: "Buy"
- assertVisible: ".*Success.*"
- tapOn: "Finish"
- stopRecording
