appId: com.stripe.android.paymentsheet.example
---
- launchApp
- startRecording: /tmp/test_results/paymentsheet-deferred-paymentintent-card
# Android specific: Navigate to example
- tapOn: "PaymentSheet with server-side confirmation"
- waitForAnimationToEnd:
    timeout: 5000
- tapOn: "Buy"
# ENTER CARD DETAILS
- extendedWaitUntil:
    visible: "Card"
    timeout: 60000
- runFlow:
    file: ./card/subflow-card-details.yaml
    env:
        CARD_NUMBER: 4242424242424242
- scroll
- tapOn:
    id: "com.stripe.android.paymentsheet.example:id/primary_button"
- assertVisible: ".*Success.*"
- tapOn: "Finish"
- stopRecording
