appId: com.stripe.android.paymentsheet.example
---
- launchApp
- startRecording: /tmp/test_results/paymentsheet-paymentintent-card-3ds2
# Android specific: Navigate to example
- tapOn: "PaymentSheet"
- waitForAnimationToEnd:
    timeout: 5000
- tapOn: "Buy"
# ENTER CARD DETAILS
- extendedWaitUntil:
    visible: "Card"
    timeout: 60000
- runFlow:
    file: ./card/subflow-card-details.yaml
    env:
        CARD_NUMBER: 4000000000003220
- scroll
- tapOn:
    id: "com.stripe.android.paymentsheet.example:id/primary_button"
####### Bypass Chrome on-boarding screen #######
- runFlow:
      file: ../common/subflow-skip-chrome-welcome.yaml
      env:
          APP_ID: com.stripe.android.paymentsheet.example
###############################################
# AUTHORIZE
- extendedWaitUntil:
      visible: "COMPLETE"
      timeout: 60000
- tapOn: "COMPLETE"
# CONFIRM AND COMPLETE
- extendedWaitUntil:
    visible: ".*Success.*"
    timeout: 60000
- tapOn: "Finish"
- stopRecording
